--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ paginate: 5
 paginate_path: "/blog/page:num/"
 
 # Build settings
-theme: jekyll-theme-mdui
+remote_theme: jekyll-theme-mdui
 markdown: kramdown
 plugins:
   - jekyll-sitemap
