--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,3 +1,3 @@
 kejun:
-  avatar: "https://i.328888.xyz/2023/03/27/iUsDJa.png"
+  avatar: "https://s1.ax1x.com/2023/08/19/pP3gBSx.png"
   name: "苹果派"
